--- a/Tarea5/tarea5_martin_cornejo.ipynb
+++ b/Tarea5/tarea5_martin_cornejo.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,9 +619,15 @@
     "dataset['sex'] = dataset['sex'].apply(lambda x: 1 if x == ' Male' else 0)\n",
     "\n",
     "country_data = labelencoder_X.fit_transform(dataset['country'])\n",
+    "education_data = labelencoder_X.fit_transform(dataset['education'])\n",
+    "# race_data = labelencoder_X.fit_transform(dataset['race'])\n",
+    "# workClass_data = labelencoder_X.fit_transform(dataset['Workclass'])\n",
+    "relationship_data = labelencoder_X.fit_transform(dataset['relationship'])\n",
+    "# marital_data = labelencoder_X.fit_transform(dataset['marital'])\n",
+    "ocupation_data = labelencoder_X.fit_transform(dataset['ocupation'])\n",
     "\n",
-    "filtered_dataset = np.transpose(np.array([country_data, dataset['sex'], dataset['hr_per_week']]))\n",
-    "onehotencoder = OneHotEncoder(categorical_features= [0])\n",
+    "filtered_dataset = np.transpose(np.array([country_data, education_data, relationship_data, ocupation_data, dataset['sex'], dataset['hr_per_week']]))\n",
+    "onehotencoder = OneHotEncoder(categorical_features= [0, 1, 2, 3])\n",
     "filtered_dataset = onehotencoder.fit_transform(filtered_dataset).toarray()\n",
     "\n",
     "dF = pd.DataFrame(filtered_dataset)"
@@ -629,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -664,16 +670,16 @@
        "      <th>8</th>\n",
        "      <th>9</th>\n",
        "      <th>...</th>\n",
-       "      <th>34</th>\n",
-       "      <th>35</th>\n",
-       "      <th>36</th>\n",
-       "      <th>37</th>\n",
-       "      <th>38</th>\n",
-       "      <th>39</th>\n",
-       "      <th>40</th>\n",
-       "      <th>41</th>\n",
-       "      <th>42</th>\n",
-       "      <th>43</th>\n",
+       "      <th>71</th>\n",
+       "      <th>72</th>\n",
+       "      <th>73</th>\n",
+       "      <th>74</th>\n",
+       "      <th>75</th>\n",
+       "      <th>76</th>\n",
+       "      <th>77</th>\n",
+       "      <th>78</th>\n",
+       "      <th>79</th>\n",
+       "      <th>80</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -695,7 +701,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -719,7 +725,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -743,7 +749,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -767,7 +773,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -789,7 +795,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -815,7 +821,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -835,7 +841,7 @@
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -863,7 +869,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -885,9 +891,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -911,7 +917,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -935,7 +941,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -957,7 +963,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -983,7 +989,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1057,7 +1063,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>45.0</td>\n",
        "    </tr>\n",
@@ -1079,7 +1085,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1098,12 +1104,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1151,7 +1157,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1159,18 +1165,18 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20 rows × 44 columns</p>\n",
+       "<p>20 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     0    1    2    3    4    5    6    7    8    9   ...    34   35   36  \\\n",
+       "     0    1    2    3    4    5    6    7    8    9   ...    71   72   73  \\\n",
        "0   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "1   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "2   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "3   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "4   0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "5   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
-       "6   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
+       "6   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  1.0  0.0   \n",
        "7   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "8   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "9   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
@@ -1181,36 +1187,36 @@
        "14  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "15  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "16  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
-       "17  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
+       "17  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   1.0  0.0  0.0   \n",
        "18  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "19  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   0.0  0.0  0.0   \n",
        "\n",
-       "     37   38   39   40   41   42    43  \n",
-       "0   0.0  0.0  1.0  0.0  0.0  1.0  40.0  \n",
-       "1   0.0  0.0  1.0  0.0  0.0  1.0  13.0  \n",
-       "2   0.0  0.0  1.0  0.0  0.0  1.0  40.0  \n",
-       "3   0.0  0.0  1.0  0.0  0.0  1.0  40.0  \n",
-       "4   0.0  0.0  0.0  0.0  0.0  0.0  40.0  \n",
-       "5   0.0  0.0  1.0  0.0  0.0  0.0  40.0  \n",
+       "     74   75   76   77   78   79    80  \n",
+       "0   0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
+       "1   0.0  0.0  0.0  0.0  0.0  1.0  13.0  \n",
+       "2   0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
+       "3   0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
+       "4   1.0  0.0  0.0  0.0  0.0  0.0  40.0  \n",
+       "5   0.0  0.0  0.0  0.0  0.0  0.0  40.0  \n",
        "6   0.0  0.0  0.0  0.0  0.0  0.0  16.0  \n",
-       "7   0.0  0.0  1.0  0.0  0.0  1.0  45.0  \n",
-       "8   0.0  0.0  1.0  0.0  0.0  0.0  50.0  \n",
-       "9   0.0  0.0  1.0  0.0  0.0  1.0  40.0  \n",
-       "10  0.0  0.0  1.0  0.0  0.0  1.0  80.0  \n",
-       "11  0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
-       "12  0.0  0.0  1.0  0.0  0.0  0.0  30.0  \n",
+       "7   0.0  0.0  0.0  0.0  0.0  1.0  45.0  \n",
+       "8   1.0  0.0  0.0  0.0  0.0  0.0  50.0  \n",
+       "9   0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
+       "10  0.0  0.0  0.0  0.0  0.0  1.0  80.0  \n",
+       "11  1.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
+       "12  0.0  0.0  0.0  0.0  0.0  0.0  30.0  \n",
        "13  0.0  0.0  1.0  0.0  0.0  1.0  50.0  \n",
        "14  0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
-       "15  0.0  0.0  0.0  0.0  0.0  1.0  45.0  \n",
-       "16  0.0  0.0  1.0  0.0  0.0  1.0  35.0  \n",
-       "17  0.0  0.0  1.0  0.0  0.0  1.0  40.0  \n",
+       "15  0.0  0.0  0.0  0.0  1.0  1.0  45.0  \n",
+       "16  0.0  0.0  0.0  0.0  0.0  1.0  35.0  \n",
+       "17  0.0  0.0  0.0  0.0  0.0  1.0  40.0  \n",
        "18  0.0  0.0  1.0  0.0  0.0  1.0  50.0  \n",
-       "19  0.0  0.0  1.0  0.0  0.0  0.0  45.0  \n",
+       "19  0.0  0.0  0.0  0.0  0.0  0.0  45.0  \n",
        "\n",
-       "[20 rows x 44 columns]"
+       "[20 rows x 81 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1258,25 +1264,25 @@
     {
      "data": {
       "text/plain": [
-       "SVC(C=20, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "SVC(C=50, cache_size=200, class_weight=None, coef0=0.0,\n",
        "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
        "  max_iter=-1, probability=False, random_state=0, shrinking=True,\n",
        "  tol=0.001, verbose=True)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classifier = SVC(C=20, kernel = 'rbf', random_state = 0,verbose=True)\n",
+    "classifier = SVC(C=1, kernel = 'rbf', random_state = 0,verbose=True)\n",
     "classifier.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1301,10 +1307,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.76      1.00      0.86      4918\n",
-      "          1       0.38      0.00      0.01      1595\n",
+      "          0       0.86      0.91      0.88      4918\n",
+      "          1       0.66      0.54      0.59      1595\n",
       "\n",
-      "avg / total       0.66      0.75      0.65      6513\n",
+      "avg / total       0.81      0.82      0.81      6513\n",
       "\n"
      ]
     }
